--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-@media (min-width: 768px) {  
+@media (max-width: 768px) {  
 
-
+    
+    .navbar{
+        background: pink;
+    }
 
 }
 
@@ -39,20 +42,11 @@
     padding-top: 3vh;
     padding-left: 3vh;
     padding-right: 3vh;
-    padding-bottom: 1vh;
+    padding-bottom: 3vh;
     background: rgb(207, 215, 223);
-    color:rgb(41, 41, 87);
+    color:rgb(0, 0, 0);
 }
-#productCategoryList{
-    padding: 0;
-    margin: 0;
-    margin-bottom: 5vh;
-}
-
-#productCategory{
-    display: inline; 
-    padding: 5vh; 
-}
+ 
 
 .nav-tabs .nav-item .nav-link {
     background-color:  rgb(250, 250, 250);
@@ -60,6 +54,15 @@
   
 #management{
     padding-top: 2vh;
+    margin-left: 1vh;
+    margin-right: 1vh;
+}
+
+/*testing showing visible selection*/
+.card:hover{
+    color:rgb(58, 129, 216);
+    border-color: rgb(58, 129, 216);
+ 
 }
  
  
