--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ img{
  
 
 .productCard{
+  background-color: white;
     display: inline-block;
     margin:5px;
     box-shadow: 1px;
@@ -122,17 +123,21 @@ img{
     border-bottom: solid rgba(107, 107, 107, 0.2);
     font-size: 2.5vh;
     border-radius: 0px;
+    transition: transform .2s; /* Animation */
 }
  
 .productCard:hover{
     color:rgb(58, 129, 216);
     border-color: rgb(58, 129, 216);
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
-}
+
+    transform: scale(1.05);
+  }
 
 .productCard img{
-    width: 50px;
+    width: 50px; 
 }
+ 
 
 #rating{
     vertical-align: middle;
