--- a/style.css
+++ b/style.css
@@ -101,29 +101,29 @@ img{
 }
 
 #categoryHeader{
-    margin-left: 1vh;
-    margin-top: 1vh;
-    font-size: 2.5vh;
-     
+    margin-left: 3vh;
+    margin-top: 3vh;
+    font-size: 2.5vh; 
 }
 
 #categorySelector{
-    margin-top: 5px;
+    margin-top: 10px;
     margin-bottom:5px;
     padding: 3px;
 }
  
 
 .productCard{
-  background-color: white;
+    background-color: white;
     display: inline-block;
+    width: 97%;
     margin:5px;
     box-shadow: 1px;
-    transition: 0.3s;
     border-bottom: solid rgba(107, 107, 107, 0.2);
     font-size: 2.5vh;
     border-radius: 0px;
-    transition: transform .2s; /* Animation */
+    overflow: hidden;
+
 }
  
 .productCard:hover{
@@ -131,11 +131,18 @@ img{
     border-color: rgb(58, 129, 216);
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
 
-    transform: scale(1.05);
+   
   }
 
 .productCard img{
-    width: 50px; 
+  
+    transition: transform .2s ease; /* Animation */
+    height: 250px;
+}
+
+.productCard img:hover{
+  
+  transform: scale(1.05);
 }
 
 .productBoxContainer{
@@ -179,6 +186,16 @@ img{
     width: 33%;
  
   }
+
+.profile{
+    overflow: hidden;
+    margin:0 auto;
+}
+.row {
+    text-align: center;
+    padding: 20px 20px 0%;
+}
+
   /* Clear floats after the columns */
   .row:after {
     content: "";
@@ -187,14 +204,13 @@ img{
   }
  
   /*responsive*/
-  @media screen and (max-width:  700px) {  
+  @media screen and (max-width:  900px) {  
     .column {
         width: 100%;
         display: block;
         margin-bottom: 20px;
-       
+        margin: auto
       }
- 
 }
 
  
