--- a/detailpage.css
+++ b/detailpage.css
@@ -1,10 +1,39 @@
-.detailPage{
-    margin:20px;
-    padding: 10px;
-}
-
 p{
     font-size: xx-large;
+}
+
+.productPage{
+    display: inline-flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
+ 
+}
+
+.main{
+    width: 45%;
+    display: inline-block;
+    word-wrap: break-word;
+    margin-right: 5%;
+    margin-left: 5%;
+
+    margin-top: 100px;
+}
+
+#rating{
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+#price{
+    margin-top:10px;
+    margin-bottom:10px;
+}
+
+#description{
+    margin-top:10px;
+    padding-top:10px;
+
+    margin-bottom: 20px;
+    border-top: 2px solid rgb(71, 185, 226);
 }
 
 .category{
@@ -14,9 +43,10 @@ p{
     font-size: x-large;
 }
 
-img, #productImage{
-    width: 480px;
+ #productImage{
+    width: 100%;
     height: 600px;
+    display: inline-block;
 }
 
 #price{
@@ -32,7 +62,6 @@ font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans
 #orderForm{
     margin: auto;
     width:65%;
-    
 }
 
 legend{
@@ -106,11 +135,6 @@ fieldset{
 
 
 @media screen and (max-width:  900px) { 
-    
-    .detailPage{
-
-    }
-
     input{
         width: 50%;
         height: 40px;
@@ -118,9 +142,35 @@ fieldset{
         transition: 0.3s;
     }
 
-    img, #productImage{
-        width: 360px ;
-        height: 480px;
+    .productPage{
+        display: initial;
+ 
+        
+     
+    }
+    
+    #productImage{
+        width: 100%;
+        height: 600px;
+ 
+    }
+    
+    .main{
+        width: 100%;
+        margin-left:  0%;
+        margin-right: 0%;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        text-align: center;
+        word-wrap: break-word;  
     }
 
+    #price{
+        margin-top: 3%;
+    }
+
+    #description{
+        margin-top:3%;
+    }
+ 
 }
