--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ ul h1{
   padding-left: 5px;
   padding-right: 5px;
   padding-bottom: 10px;
+  
 }
 
 .managementCard{
@@ -94,6 +95,7 @@ ul h1{
     transition: 0.3s;
     width: 33%;
     border-radius: 5px;
+    background-color: white;
 }
 
 .managementCard:hover {
@@ -206,6 +208,9 @@ img{
     display: table;
     clear: both;
   }
+
+
+   
  
   /*responsive*/
   @media screen and (max-width:  900px) {  
